--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "link": "^1.5.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "^0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-swiper": "^1.6.0",
+    "tailwindcss": "^3.3.2",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
