--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "tailwindcss": "^3.3.2"
   },
